# advent_2022_point_cloud_classification

./: .gitignore
data/: download.sh
hls/: CMakeLists.txt
hls/src/: batch_norm_1d.hpp  data_conversion.hpp  data_transfer.hpp  data_type_config.hpp  inference_cls_naive.hpp  inference_cls_naive_fail.hpp  inference_cls_opt1.hpp  inference_cls_opt3.hpp  inference_feat_naive.hpp  inference_feat_opt1.hpp  inference_feat_opt2.hpp  inference_feat_opt3.hpp  layer_types.hpp  linear.hpp  max_pool_1d.hpp  net_params.hpp  op_modes.hpp  top_naive.cpp  top_naive_fail.cpp  top_opt1.cpp  top_opt2.cpp  top_opt3.cpp  vector_utils.hpp
hls/tcl/: common.tcl
host/: model_zcu104.py  test_zcu104.py  test_zcu104.sh  time_zcu104.py  time_zcu104.sh
net/: model.py  modelnet_dataset.py  modelnet_transforms.py  test.py  test.sh  train.py  train.sh  utils.py
net/outputs/2022-12-11-21-41-35-modelnet40-all/: best-model.pth
net/outputs/2022-12-11-21-53-29-modelnet40-half1/: best-model.pth
vivado/: CMakeLists.txt
vivado/bitstream/: pointnet_naive.hwh  pointnet_naive_150.hwh  pointnet_naive_200.hwh  pointnet_naive_250.hwh  pointnet_opt1.hwh  pointnet_opt2.hwh  pointnet_opt3.hwh
vivado/tcl/: board_design_naive.tcl  board_design_naive_150.tcl  board_design_naive_200.tcl  board_design_naive_250.tcl  board_design_opt3_150.tcl  create_project.tcl
